--- a/app/globals.css
+++ b/app/globals.css
@@ -101,6 +101,12 @@ body{
 }
 
 
+.bg-signup{
+  background: url(../public/images/login/4.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
 .bg-login{
   background: url(../public/images/login/4.jpg);
   background-size: cover;
