--- a/app/globals.css
+++ b/app/globals.css
@@ -25,6 +25,10 @@ body{
 
 @layer base {
   :root {
+    --bg: #f1f5f9;
+    --bg-soft: #e2e8f0;
+    --text-clr: #020617;
+    --text-clr-soft: #1e293b;
     --background: 0 0% 100%;
     --foreground: 20 14.3% 4.1%;
     --card: 0 0% 100%;
@@ -53,6 +57,10 @@ body{
   }
 
   .dark {
+    --bg: #0f172a;
+    --bg-soft: #1e293b;
+    --text-clr: #f1f5f9;
+    --text-clr-soft: #cbd5e1;
     --background: 20 14.3% 4.1%;
     --foreground: 60 9.1% 97.8%;
     --card: 20 14.3% 4.1%;
