update globals.css and GenreSlider.jsx

--- a/app/globals.css
+++ b/app/globals.css
@@ -161,3 +161,11 @@ body {
   background-position: center;
   background-repeat: no-repeat;
 }
+
+
+
+.genre-slider{
+  display: grid;
+  grid-template-columns: repeat(auto-fit , 230px);
+  gap: 1rem;
+}
