--- a/app/globals.css
+++ b/app/globals.css
@@ -24,7 +24,7 @@ body {
 
 :root {
   --bg: #f8fafc;
-  --bg-soft: #f1f5f9;
+  --bg-soft: #f1f5f9c5;
   --text-clr: #020617;
   --text-clr-soft: #1e293b;
   --border-clr:#1e293bc7;
