--- a/components/shared/homeCarousel.css
+++ b/components/shared/homeCarousel.css
@@ -13,7 +13,7 @@
     position: absolute;
     top: 80%;
     transform: translateY(-70%);
-    left: 70%;
+    left: -70%;
     border-radius: 20px;
     box-shadow: 0 25px 50px rgba(0, 0, 0, 0.3);
     background-position: center;
@@ -37,16 +37,16 @@
   }
   
   /* Extra items on right */
-  .carousel .list .item:nth-child(3) { left: 67%; }
-  .carousel .list .item:nth-child(4) { left: calc(67% + 200px); }
-  .carousel .list .item:nth-child(5) { left: calc(67% + 400px); }
-  .carousel .list .item:nth-child(6) { left: calc(67% + 600px); }
+  .carousel .list .item:nth-child(3) { left: -67%; }
+  .carousel .list .item:nth-child(4) { left: calc(-67% + 200px); }
+  .carousel .list .item:nth-child(5) { left: calc(-67% + 400px); }
+  .carousel .list .item:nth-child(6) { left: calc(-67% + 600px); }
   
   /* Hide items after 6th */
-  .carousel .list .item:nth-child(n+7) {
+  /* .carousel .list .item:nth-child(n+7) {
     left: calc(67% + 800px);
     opacity: 0;
-  }
+  } */
   
   /* --- Content inside active item --- */
   .list .item .content {
