--- a/components/shared/homeCarousel.css
+++ b/components/shared/homeCarousel.css
@@ -81,14 +81,14 @@
   }
   
   .content .name {
-    font-size: 20px;
+    font-size: 30px;
     font-weight: bold;
     text-shadow: 3px 4px 4px rgba(255,255,255,0.8);
     animation-delay: 0.6s;
   }
   
   .content .des {
-    font-size: 14px;
+    font-size: 17px;
     margin: 10px 0 20px 5px;
     animation-delay: 0.9s;
   }
@@ -118,7 +118,7 @@
     position: absolute;
     top: 90%;
     right: 52%;
-    display: flex;
+    display: none;
     gap: 10px;
     width: 300px;
     max-width: 30%;
@@ -137,12 +137,9 @@
     border: none;
     cursor: pointer;
     transition: 0.5s;
+    display: none;
   }
   
-  .arrows button:hover {
-    background: #fff;
-    color: #000;
-  }
   
   /* --- Progress bar --- */
   .carousel .timeRunning {
