--- a/components/shared/homeCarousel.css
+++ b/components/shared/homeCarousel.css
@@ -175,6 +175,7 @@
   /* From Uiverse.io by suleymanlaarabidev */ 
 .anime-card {
   box-shadow: 0px 0px 10px 5px  rgba(0, 0, 0, 0.705);
+  overflow: hidden;
 }
 
 .anime-card:hover {
