update Card.jsx and homeCarousel.css

--- a/components/shared/homeCarousel.css
+++ b/components/shared/homeCarousel.css
@@ -172,70 +172,52 @@
   }
   
 
-  /* From Uiverse.io by suleymanlaarabidev */ 
-.anime-card {
-  box-shadow: 0px 0px 10px 5px  rgba(0, 0, 0, 0.705);
-  overflow: hidden;
+/* From Uiverse.io by JustCode14 */ 
+.flip-card {
+  background-color: transparent;
+  width: 190px;
+  height: 254px;
+  perspective: 1000px;
+
 }
 
-.anime-card:hover {
-  border-radius: 15px;
-  cursor: pointer;
-  transform: scale(1.2);
-  box-shadow: 0px 0px 10px 5px  rgba(0, 0, 0, 0.705);
-  background: rgb(103, 151, 255);
-}
 
-.first-content {
-  height: 100%;
+
+.flip-card-inner {
+  position: relative;
   width: 100%;
-  transition: all 0.4s;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  opacity: 1;
-  border-radius: 15px;
-}
-
-.anime-card:hover .first-content {
-  height: 0px;
-  opacity: 0;
-}
-
-.second-content {
-  height: 0%;
-  width: 100%;
-  opacity: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 15px;
-  transition: all 0.4s;
-  font-size: 0px;
-  transform: rotate(90deg) scale(-1);
-}
-.second-content img {
-  height: 0%;
-  width: 100%;
-  opacity: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 15px;
-  transition: all 0.4s;
-  font-size: 0px;
-  transform: rotate(90deg) scale(-1);
-}
-
-.anime-card:hover .second-content {
-  opacity: 1;
   height: 100%;
-  font-size: 1.8rem;
-  transform: rotate(0deg);
+  text-align: center;
+  transition: transform 0.6s;
+  transition-timing-function: cubic-bezier(0.61, 0.98, 0.48, 1.01);
+  transform-style: preserve-3d;
 }
-.anime-card:hover .second-content img {
-  opacity: 1;
+
+.flip-card:hover .flip-card-inner {
+  transform: rotate(180deg) rotateX(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+  box-shadow: 0 8px 14px 0 rgba(0, 0, 0, 0.2);
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
   height: 100%;
-  font-size: 1.8rem;
-  transform: rotate(0deg);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  border-radius: 1rem;
+}
+
+.flip-card-front {
+  background: #fff;
+  color: #000;
+}
+
+.flip-card-back {
+  background: #000;
+  color: #fff;
+  transform: rotateY(180deg);
 }
