--- a/components/shared/homeCarousel.css
+++ b/components/shared/homeCarousel.css
@@ -206,8 +206,8 @@
   justify-content: center;
   width: 100%;
   height: 100%;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
+  /* -webkit-backface-visibility: hidden;
+  backface-visibility: hidden; */
   border-radius: 1rem;
 }
 
