--- a/components/shared/homeCarousel.css
+++ b/components/shared/homeCarousel.css
@@ -175,8 +175,8 @@
 /* From Uiverse.io by JustCode14 */ 
 .flip-card {
   background-color: transparent;
-  width: 190px;
-  height: 254px;
+  /* width: 190px;
+  height: 254px; */
   perspective: 1000px;
 
 }
