--- a/components/shared/homeCarousel.css
+++ b/components/shared/homeCarousel.css
@@ -189,7 +189,7 @@
   text-align: center;
   transition: transform 0.6s;
   transition-timing-function: cubic-bezier(0.61, 0.98, 0.48, 1.01);
-  /* transform-style: preserve-3d; */
+  transform-style: preserve-3d;
 }
 
 .flip-card:hover .flip-card-inner {
