--- a/components/shared/homeCarousel.css
+++ b/components/shared/homeCarousel.css
@@ -174,7 +174,7 @@
 
 
 .flip-card {
-  background-color: transparent;
+  background: linear-gradient(-45deg, #fc00ff 0%, #00dbde 100% );
 
   perspective: 1000px;
 
@@ -184,6 +184,7 @@
 
 .flip-card-inner {
   position: relative;
+  background: linear-gradient(-45deg, #fc00ff 0%, #00dbde 100% );
   width: 100%;
   height: 100%;
   text-align: center;
@@ -301,6 +302,4 @@
   filter: blur(7px);
 }
 
-.new-card:hover .img-content svg {
-  fill: transparent;
-}
+
