--- a/components/shared/homeCarousel.css
+++ b/components/shared/homeCarousel.css
@@ -174,9 +174,13 @@
 
 
 .flip-card {
-  background: linear-gradient(-45deg, #fc00ff 0%, #00dbde 100% );
+  background-color: transparent;
 
   perspective: 1000px;
+
+}
+.flip-card::before {
+  background: linear-gradient(-45deg, #fc00ff 0%, #00dbde 100% );
 
 }
 
@@ -184,7 +188,6 @@
 
 .flip-card-inner {
   position: relative;
-  background: linear-gradient(-45deg, #fc00ff 0%, #00dbde 100% );
   width: 100%;
   height: 100%;
   text-align: center;
@@ -301,5 +304,4 @@
   rotate: 30deg;
   filter: blur(7px);
 }
-
 
