--- a/components/shared/homeCarousel.css
+++ b/components/shared/homeCarousel.css
@@ -181,6 +181,11 @@
 }
 .flip-card::before {
   background: linear-gradient(-45deg, #fc00ff 0%, #00dbde 100% );
+  inset: 0;
+  content: "";
+  z-index: -1;
+  filter: blur(20px);
+  position: absolute;
 
 }
 
