update globals.css and Topbar.jsx

--- a/app/globals.css
+++ b/app/globals.css
@@ -168,3 +168,7 @@ body {
 .Card_movie_Info {
   @apply flex flex-col justify-end p-5 rounded-md absolute bottom-0 left-0 w-full h-full bg-gradient-to-b from-[rgba(15,23,42,0.35)] to-[rgba(15,23,42,0.62)] hover:from-[rgba(15,23,42,0.65)] hover:to-[rgba(15,23,42,0.72)] transition-all duration-500
 }
+
+.nav-class{
+  @apply bg-[rgba(255,255,255,.5)] backdrop:blur-xl text-black dark:bg-[rgba(0,0,0,.5)] dark:text-white
+}
